<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="loginData"
            type="ru.d3st.myoktwo.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_one"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/login_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/sdk_login_any"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <Button
                android:id="@+id/sdk_login_sso"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_sso" />

            <Button
                android:id="@+id/sdk_login_oauth"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_oauth" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sdk_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/sdk_get_currentuser"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_users_get_current_user" />

            <Button
                android:id="@+id/sdk_get_friends"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_user_get_friends" />

            <Button
                android:id="@+id/sdk_post"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_widget" />

            <Button
                android:id="@+id/sdk_app_invite"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_invite_widget" />

            <Button
                android:id="@+id/sdk_app_suggest"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_suggest_widget" />

            <Button
                android:id="@+id/sdk_report_payment"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_report_payment" />

            <Button
                android:id="@+id/sdk_logout"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_tokens" />
        </LinearLayout>

    </LinearLayout>
</layout>