<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="group"
            type="ru.d3st.myoktwo.domain.MyGroup" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6100DDFF">

        <ImageView
            android:id="@+id/group_avatar"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin_one"
            android:layout_marginTop="@dimen/margin_one"
            android:contentDescription="@string/avatar_hardcoded"
            app:imageUrl="@{group.picAvatar}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_group_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_one"
            android:layout_marginTop="@dimen/margin_one"
            android:layout_marginEnd="@dimen/margin_one"
            android:hint="@string/example_group_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txt_count_group_members"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/group_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:setName="@{group}" />

        <TextView
            android:id="@+id/txt_count_group_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_one"
            android:layout_marginEnd="@dimen/margin_one"
            android:gravity="end"
            android:hint="@string/hint_member_count"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setMembers="@{group}" />

        <TextView
            android:id="@+id/txt_today_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_one"
            android:hint="@string/today_stats"
            app:layout_constraintStart_toStartOf="@+id/txt_group_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_group_name" />

        <TextView
            android:id="@+id/txt_group_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/example_follower"
            app:layout_constraintStart_toStartOf="@+id/txt_group_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_today_stats"
            app:setDiffMember="@{group}" />

        <TextView
            android:id="@+id/txt_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_one"

            android:hint="@string/example_post"
            app:layout_constraintStart_toEndOf="@+id/txt_group_follow"
            app:layout_constraintTop_toTopOf="@+id/txt_group_follow"
            app:setPosts="@{group}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>