<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="profileViewModelData"
            type="ru.d3st.myoktwo.profile.ProfileViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.Profile">

    <TextView
        android:id="@+id/name_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_one"
        android:layout_marginTop="@dimen/margin_one"
        android:layout_marginEnd="@dimen/margin_one"
        android:fontFamily="@font/roboto"
        android:hint="@string/name_hint"
        android:text="@{profileViewModelData.oneName}"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginTop="@dimen/margin_one"
        android:contentDescription="@string/profile_avatar"
        app:imageUrl="@{profileViewModelData.avatarUser}"
        app:layout_constraintStart_toStartOf="@+id/name_profile"
        app:layout_constraintTop_toBottomOf="@+id/name_profile"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/age_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_one"
        android:fontFamily="@font/roboto"
        android:hint="@string/age_hint"
        android:text="@{profileViewModelData.ageUser}"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/name_profile"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/city_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_one"
        android:fontFamily="@font/roboto"
        android:hint="@string/city_hint"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@{profileViewModelData.cityUser}"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/name_profile"
        app:layout_constraintStart_toStartOf="@+id/age_profile"
        app:layout_constraintTop_toBottomOf="@+id/age_profile" />

<!--    <TextView
        android:id="@+id/json_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_one"
        android:layout_marginTop="@dimen/margin_one"
        android:layout_marginEnd="@dimen/margin_one"
        android:layout_marginBottom="@dimen/margin_three"
        android:text="@{profileViewModelData.response}"
        android:hint="@string/loading_json"
        app:layout_constraintBottom_toTopOf="@+id/btn_to_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />-->

    <Button
        android:id="@+id/btn_to_group"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_three"
        android:text="@string/to_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>