<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="detailDataViewModel"
            type="ru.d3st.myoktwo.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_group"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_marginStart="@dimen/margin_one"
            android:layout_marginTop="@dimen/margin_one"
            android:contentDescription="@string/desc_icon_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_one"
            android:layout_marginTop="@dimen/margin_one"
            android:hint="@string/example_group_name"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/icon_group"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/test_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_one"
            android:hint="@string/test"
            android:text="@{detailDataViewModel.groupData.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>